[package]
name = "pg_smtp_client"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL extension to send email using SMTP"
license = "MIT"
readme = "README.md"
repository = "https://github.com/brianpursley/pg_smtp_client"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "=0.11.4"
lettre = "=0.11.7"
serial_test = "3.1.1"

[dev-dependencies]
pgrx-tests = "=0.11.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
