[package]
name = "pg_smtp_client"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_smtp_client"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "0.12.7"
lettre = "=0.11.10"

[dev-dependencies]
pgrx-tests = "0.12.7"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
